--- a/app/index.html
+++ b/app/index.html
@@ -15,17 +15,33 @@
             fetch('/code/')
                 .then(response => response.text())
                 .then(code => document.getElementById('code').innerText = code)
+
+                function copyCode() {
+                    var codeElem = document.getElementById("code")
+
+                    // mobile devices
+                    if (codeElem.select != null) {
+                        codeElem.select()
+                        codeElem.setSelectionRange(0, 99999)
+                    }
+
+                    navigator.clipboard.writeText(codeElem.innerText)
+                }
         </script>
     </head>
     <body>
-        <div style="background: #85c6db; padding: 0.01em; border-radius: 0 0 2em 2em;">
+        <div style="background: #9acada; margin-top: 3em; padding: 0.01em; border-radius: 2em;">
             <!-- <h2>Your Access Code:</h1>
             <h1 id="code"></h1> -->
             You've completed the workshop!</br>
-            Enter your email and access code to order your swag
+            Enter your <i>email</i> and <i>access code</i> to order your swag
             <h3>Your access code:</h3>
             <h1 id="code"></h1>
+            <button onclick="copyCode()">Copy code</button>
         <div>
-        <iframe id="swag-portal" src="/" style="position:absolute;left:0;width:100%;height:70%;" frameborder="0"></iframe>
+
+        <h2><a href="https://brandvia.vmware.com">Order Here</a></h2>
+        
+        <!-- <iframe id="swag-portal" src="/" style="position:absolute;left:0;width:100%;height:70%;" frameborder="0"></iframe> -->
     </body>
 </html>
